# $Id: Makefile.am,v 1.8 2016/03/13 16:56:53 sarrazip Exp $

SUBDIRS = vectrex

pkgdata_DATA = \
        stdlib.inc \
        stdlib-data.inc \
        cmoc.h \
        assert.h \
        stdarg.h \
        coco.h \
        disk.h \
        vectrex.h

EXTRA_DIST = $(pkgdata_DATA)

MAINTAINERCLEANFILES = Makefile.in
