# $Id: Makefile.am,v 1.10 2018/02/08 05:10:36 sarrazip Exp $

pkgdata_DATA = \
        stdlib.inc \
        stdlib-data.inc \
        float-ecb.inc \
        cmoc.h \
        assert.h \
        stdarg.h \
        coco.h \
        disk.h

EXTRA_DIST = $(pkgdata_DATA)

MAINTAINERCLEANFILES = Makefile.in
